--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Josean Log</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Stack+Sans+Headline:wght@200..700&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+<div class="position-absoulute h-100 w-100"> <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100">        <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100">
+  <div class="container-fluid ">
+    <a class="navbar-brand" href="#">Josean Log</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./pages/musica.html">Mi música</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">Tutoriales</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contacto</a>
+      </ul>
+     
+    </div>
+</nav>
+
+</header>
+    <main>        
+      <div class="container text-center mt-5 pt-5">
+        <img src="./img/josean_log.jpeg" alt="josean log" width="400px">
+        <h1 class="display-4">Bienvenido a mi web oficial </h1>
+        <p class="lead">Te cuento un poco sobre mi </p>
+      </div>
+          <p>Soy Jósean Log, terrícola enamorado de la vida. Crecí en Cholula, un pintoresco pueblo mexicano donde una gran pirámide de 2,500 años domina el paisaje a la sombra del volcán Popocatépetl. La música es mi idioma, mi forma de vivir. Desde que tengo memoria, es a través de ella como mejor he conseguido entenderme en un mundo lleno de misterios fascinantes. Soy asustadizo y precavido, y suelo complicarme la existencia con dilemas que terminan obligándome a fluir y a reinventarme continuamente. </p>
+
+    </main>
+
+
+    <footer>
+      <div class="container text-center py-4">
+        <p>&copy; 2024 Josean Log. Todos los derechos reservados.</p>
+      </div>
+    </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
