--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="./pages/musica.html">Mi música</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacto</a>
+          <a class="nav-link" href="./pages/contacto.html">Contacto</a>
       </ul>
      
     </div>
