--- a/pages/musica.html
+++ b/pages/musica.html
@@ -56,14 +56,14 @@
     <div class="card" style="width: 18rem;">
         <img src="../img/ep2.png" class="card-img-top" alt="EP">
         <div class="card-body">
-            <h5 class="card-title">EP 3 - Hablame de tú</h5>
-            <p class="card-text">Con Bootstrap, esta card ya tiene estilos, espaciado y sombra predefinidos.</p>
+            <h5 class="card-title">EP 2 - Hablame de tú</h5>
+            <p class="card-text">Contiene: La vida la vida - Combustión - No quise - Contento de Conteoto.</p>
             <a href="./img/ep3.jpeg" class="btn btn-primary">Escuchar</a>
         </div>
     </div>
     
     <div class="card" style="width: 18rem;">
-        <img src="../img/ep1.jpeg" class="card-img-top" alt="EP">
+        <img src="../img/ep3.jpeg" class="card-img-top" alt="EP">
         <div class="card-body">
             <h5 class="card-title">EP 3 - Mas normal de lo normal</h5>
             <p class="card-text">Contiene: A Pesar de Todo - En Vez de Huir - ¿Qué Me Dices? - Recuperarlo - Hora de Comer -  Nada Que Me Guste Máss.</p>
