--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Stack+Sans+Headline:wght@200..700&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="./css/styles.css">
+</head>§
 <body>
     <header>
 <div class="position-absoulute h-100 w-100"> <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100">        <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100">
@@ -48,6 +48,9 @@
     <footer>
       <div class="container text-center py-4">
         <p>&copy; 2024 Josean Log. Todos los derechos reservados.</p>
+        <img class="logosfooter" src="./img/spotify_logo.svg" alt="Spotify_logo"></a>
+        <img class="logosfooter" src="./img/logo_youtube.jpg.avif" alt="Youtube_logo"></a>
+        <img class="logosfooter" src="./img/Instagram_logo.png" alt="Instagram_logo"></a>
       </div>
     </footer>
 
