--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container text-center py-4">
         <p>&copy; 2024 Josean Log. Todos los derechos reservados.</p>
         <img class="logosfooter" src="./img/spotify_logo.svg" alt="Spotify_logo"></a>
-        <img class="logosfooter" src="./img/logo_youtube.jpg.avif" alt="Youtube_logo"></a>
+        <img class="logosfooter" src="./img/logo_youtube.jpg" alt="Youtube_logo"></a>
         <img class="logosfooter" src="./img/Instagram_logo.png" alt="Instagram_logo"></a>
       </div>
     </footer>
