--- a/index.html
+++ b/index.html
@@ -45,12 +45,17 @@
 
       </div>
 </main>
-    <footer>
+   <footer>
       <div class="container text-center py-4">
         <p>&copy; 2024 Josean Log. Todos los derechos reservados.</p>
-        <img class="logosfooter" src="./img/spotify_logo.svg" alt="Spotify_logo"></a>
-        <img class="logosfooter" src="./img/logo_youtube.jpg" alt="Youtube_logo"></a>
-        <img class="logosfooter" src="./img/Instagram_logo.png" alt="Instagram_logo"></a>
+
+        <div class="d-flex justify-content-center gap-3">
+            <a class="nav-link" aria-current="page" href="https://www.instagram.com/joseanlog/">Intagram</a>
+            <a class="nav-link" aria-current="page" href="https://open.spotify.com/intl-es/artist/1LMyTeRhjaitILs98h3MaF">Spotify</a>
+            <a class="nav-link" aria-current="page" href="https://www.youtube.com/joseanlog">Youtube</a>
+            <a class="nav-link" aria-current="page" href="https://www.tiktok.com/@joseanlog?lang=es">TikTok</a>
+        </div>
+        
       </div>
     </footer>
 
