--- a/pages/musica.html
+++ b/pages/musica.html
@@ -81,6 +81,14 @@
     <footer>
       <div class="container text-center py-4">
         <p>&copy; 2024 Josean Log. Todos los derechos reservados.</p>
+
+        <div class="d-flex justify-content-center gap-3">
+            <a class="nav-link" aria-current="page" href="https://www.instagram.com/joseanlog/">Intagram</a>
+            <a class="nav-link" aria-current="page" href="https://open.spotify.com/intl-es/artist/1LMyTeRhjaitILs98h3MaF">Spotify</a>
+            <a class="nav-link" aria-current="page" href="https://www.youtube.com/joseanlog">Youtube</a>
+            <a class="nav-link" aria-current="page" href="https://www.tiktok.com/@joseanlog?lang=es">TikTok</a>
+        </div>
+        
       </div>
     </footer>
 
