--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,7 +45,7 @@
                 <div class="text-center"> 
                     <h1 class="display-4">Contacto </h1>
                     <p class="lead">hola@joseanlog.com </p>  
-                    <p class="lead">¿Te gustaría formar parte de mi Newslette para recibir todas las noticias y adelantos antes que nadie :)
+                    <p class="lead">¿Te gustaría formar parte de mi Newsletter para recibir todas las noticias y adelantos antes que nadie :)
                         Rellena el siguiente formulario:  
                     </p>  
                 </div>
@@ -53,7 +53,7 @@
                 <form class="row g-3 text-start my-4"> 
                     <div class="col-md-6">
                       <label for="inputEmail4" class="form-label">Email</label>
-                      <input type="email" class="form-control" id="inputEmail4">
+                      <input type="email" class="form-control" id="inputEmail4ß">
                     </div>
                     <div class="col-md-6">
                       <label for="inputPassword4" class="form-label">Nombre</label>
