--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,23 +11,23 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header>
+ <header>
 <div class="position-absoulute h-100 w-100"> <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100">        <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100">
   <div class="container-fluid ">
-    <a class="navbar-brand" href="#">Josean Log</a>
+     <img class="logotipo" src="../img/logo_josean.webp" alt="logo_josean" width=180px>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./musica.html">Mi música</a>
+          <a class="nav-link" href="../pages/musica.html">Mi música</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacto</a>
+          <a class="nav-link" href="../pages/contacto.html">Contacto</a>
       </ul>
      
     </div>
